@@ -159,6 +159,10 @@ module Sequel
       raise(Error, 'schema parsing returned no columns, table probably doesn\'t exist') if cols.nil? || cols.empty?
       cols.each do |_,c|
         c[:ruby_default] = column_schema_to_ruby_default(c[:default], c[:type])
+        if c[:primary_key] && !c.has_key?(:auto_increment)
+          # If adapter didn't set it, assume that integer primary keys are auto incrementing
+          c[:auto_increment] = !!(c[:db_type] =~ /int/io)
+        end
         if !c[:max_length] && c[:type] == :string && (max_length = column_schema_max_length(c[:db_type]))
           c[:max_length] = max_length
         end
