@@ -88,6 +88,15 @@ describe "Database schema parser" do
     DB.schema(:items).collect{|k,v| k if v[:primary_key]}.compact.should == [:number1, :number2]
   end
 
+  cspecify "should parse autoincrementing primary keys from the schema properly", :sqlite do
+    DB.create_table!(:items){Integer :number}
+    DB.schema(:items).collect{|k,v| k if v[:primary_key] && v[:auto_increment]}.compact.should == []
+    DB.create_table!(:items){primary_key :number}
+    DB.schema(:items).collect{|k,v| k if v[:primary_key] && v[:auto_increment]}.compact.should == [:number]
+    DB.create_table!(:items){Integer :number, :primary_key=>true}
+    DB.schema(:items).collect{|k,v| k if v[:primary_key] && v[:auto_increment]}.compact.should == []
+  end
+
   specify "should parse NULL/NOT NULL from the schema properly" do
     DB.create_table!(:items){Integer :number, :null=>true}
     DB.schema(:items).first.last[:allow_null].should == true
