@@ -1,5 +1,7 @@
 === HEAD
 
+* Add :auto_increment key to schema information for primary key columns (jeremyevans) (#919)
+
 * Fix handling of schema qualified tables in many_through_many associations (jeremyevans)
 
 === 4.17.0 (2014-12-01)
